--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Angular10JwtAuth": {
+    "MeetingUserApp": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Angular10JwtAuth",
+            "outputPath": "dist/MeetingUserApp",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -64,18 +64,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Angular10JwtAuth:build"
+            "browserTarget": "MeetingUserApp:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Angular10JwtAuth:build:production"
+              "browserTarget": "MeetingUserApp:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Angular10JwtAuth:build"
+            "browserTarget": "MeetingUserApp:build"
           }
         },
         "test": {
@@ -113,16 +113,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Angular10JwtAuth:serve"
+            "devServerTarget": "MeetingUserApp:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Angular10JwtAuth:serve:production"
+              "devServerTarget": "MeetingUserApp:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "Angular10JwtAuth"
+  "defaultProject": "MeetingUserApp"
 }
