--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/compiler-cli": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
+    "@angular/localize": "~10.0.0",
     "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "bootstrap": "^3.4.1",
     "express": "^4.17.1",
     "path": "^0.12.7",
